[package]
name = "lithograph"
version = "0.1.0"
authors = ["SphericalKat <amolele@gmail.com>"]
edition = "2018"
description = "A simple CMS for serving my blog and website"
repository = "https://github.com/SphericalKat/lithograph"
homepage = "https://github.com/SphericalKat/lithograph"
license = "MIT"
keywords = ["cms", "website", "blog", "web"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.11"
askama = { version = "0.11.1", features = ["with-rocket"] }
askama_rocket = "0.11.0"
rocket_contrib = { version = "0.4.11", default-features = false, features = ["serve"] }
rust-embed = { version = "6.4.0", features = ["debug-embed"] }
chrono = "0.4.19"
comrak = { git = "https://github.com/SphericalKat/comrak", branch = "master" }
syntect = { version = "5.0.0", default-features = false, features = ["default-fancy"] }
rustc_version_runtime = "0.2.1"
lazy_static = "1.4.0"
